# uptrader-django-tree-menu

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml  requirements.txt  task_text.md  tox.ini
apps/menus/: admin.py  apps.py  models.py  urls.py  views.py
apps/menus/migrations/: 0001_initial.py  0002_menuitem_url.py
apps/menus/templates/menus/: draw_menu.html  main.html  menu_item.html
apps/menus/templatetags/: menu_tags.py
apps/templates/base/: base.html
tree_menu/: settings.py  urls.py  wsgi.py
util_tools/: scripts.py
